// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Radio (checked + disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
  cursor: not-allowed;
  color: #B4BAD1;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1:focus + .c5 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
  cursor: not-allowed;
  border-color: #D9DCE9;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  background-color: #B4BAD1;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

.c3:after {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby="checkBox_label_1"
    checked=""
    class="c1 c2"
    disabled=""
    id="radio_0"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="radio_0"
  />
  <label
    aria-hidden="true"
    class="c4"
    disabled=""
    for="radio_0"
    id="checkBox_label_1"
  >
    Checked
  </label>
</div>
`;

exports[`render Radio (checked) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
}

.c4:last-child {
  margin-bottom: 0;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #2852EB;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

.c3:after {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby="checkBox_label_1"
    checked=""
    class="c1 c2"
    id="radio_0"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="radio_0"
  />
  <label
    class="c4"
    for="radio_0"
    id="checkBox_label_1"
  >
    Checked
  </label>
</div>
`;

exports[`render Radio (unchecked + disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
  cursor: not-allowed;
  color: #B4BAD1;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1:focus + .c5 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c7 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
  cursor: not-allowed;
  border-color: #D9DCE9;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  background-color: #B4BAD1;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="checkBox_label_1"
    class="c1 c2"
    disabled=""
    id="radio_0"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="radio_0"
  />
  <label
    aria-hidden="true"
    class="c4"
    disabled=""
    for="radio_0"
    id="checkBox_label_1"
  >
    Unchecked
  </label>
</div>
`;

exports[`render Radio (unchecked) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1:focus + .c5 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="checkBox_label_1"
    class="c1 c2"
    id="radio_0"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="radio_0"
  />
  <label
    class="c4"
    for="radio_0"
    id="checkBox_label_1"
  >
    Unchecked
  </label>
</div>
`;
